--- a/gb/20/2/23/n11890348.md
+++ b/gb/20/2/23/n11890348.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hvrsuf251/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hvrsuf251/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/hvrsuf251/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/hvrsuf251/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hvrsuf251/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hvrsuf251/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【珍言真语】商界领袖毛汉：疫情致生意损七成</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/be1744c362c00d7797884c46a4f5ca78-600x400.jpg" />
 <h6>印度协会前主席毛汉（Mohan Chugani）坦言，武汉肺炎疫情令他的贸易生意额下降了七成。有些酒店入住率只有7%～8%；港府做事慢人一步，为什么民间买到口罩而林郑买不到？（大纪元合成图）
 </h6>
 <hr>
-<p>【大纪元2020年02月24日讯】（大纪元记者梁珍香港报导）<a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>疫情重创全球经济，牛津经济研究院（Oxford Economics）近日发布报告警告，疫情若继续蔓延并成为全球性流行病，可能导致全球经济损失1.1兆美元（约9.4兆港元）。而在香港，“反送中”抗争运动在警察暴力笼罩下影响超过半年后，疫情扩散几乎每天都有确诊染病个案，让市民足不出户消费低迷，令许多行业雪上加霜。</p>
-<p>现年74岁的印度协会前主席<a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E6%AF%9B%E6%B1%89%E8%A4%9A%E7%AE%80%E5%AE%81.md">毛汉褚简宁</a>（Mohan Chugani），家境富有，也是一名事业有成的商人。他坦言武汉新型冠状病毒肺炎疫情，令他的贸易生意额下降了七成。</p>
+<p>【大纪元2020年02月24日讯】（大纪元记者梁珍香港报导）<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>疫情重创全球经济，牛津经济研究院（Oxford Economics）近日发布报告警告，疫情若继续蔓延并成为全球性流行病，可能导致全球经济损失1.1兆美元（约9.4兆港元）。而在香港，“反送中”抗争运动在警察暴力笼罩下影响超过半年后，疫情扩散几乎每天都有确诊染病个案，让市民足不出户消费低迷，令许多行业雪上加霜。</p>
+<p>现年74岁的印度协会前主席<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AF%9B%E6%B1%89%E8%A4%9A%E7%AE%80%E5%AE%81.md#1">毛汉褚简宁</a>（Mohan Chugani），家境富有，也是一名事业有成的商人。他坦言武汉新型冠状病毒肺炎疫情，令他的贸易生意额下降了七成。</p>
 <p>“我的生意都有非常大的影响，订单都取消了，报价报不了，过年之前做了一半，应该过年后接着做，但现在做不了，那些伙计不能上班。”他说。</p>
-<p><a src=""></a><a href="https://git.io/JvEUM"><img width="600" src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/xoxcccE_d3I" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<h2>大陆工厂<a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E5%A4%8D%E5%B7%A5.md">复工</a>难 全球供应链受损</h2>
-<p>自80年代以来，大陆因为廉价的劳动力等吸引各国公司到大陆设厂投资，大陆也成为一个世界工厂。但在今次疫情冲击下，大陆工厂<a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E5%A4%8D%E5%B7%A5.md">复工</a>无期，加上早前中美贸易战影响，很多外资公司纷纷关闭大陆工厂或者加速撤资，全球的供应链受到影响。</p>
+<p><a src=""></a><a href="https://git.io/JvEUM"><img width="600" src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/xoxcccE_d3I" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<h2>大陆工厂<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%A4%8D%E5%B7%A5.md#1">复工</a>难 全球供应链受损</h2>
+<p>自80年代以来，大陆因为廉价的劳动力等吸引各国公司到大陆设厂投资，大陆也成为一个世界工厂。但在今次疫情冲击下，大陆工厂<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%A4%8D%E5%B7%A5.md#1">复工</a>无期，加上早前中美贸易战影响，很多外资公司纷纷关闭大陆工厂或者加速撤资，全球的供应链受到影响。</p>
 <p>比如港人热抢的厕纸，毛汉的公司也有卖，每月寄一个40尺货柜的货，但现在供应链断了，客人要改去马来西亚买，令未来双方合作生变。</p>
 <p>他说：“我的担心是，客人暂时先帮别人买，日后我再还给他。但是做生意不是这样，他和马来西亚联系上，以后他和我议价，或者我不够他竞争，样样事情都可能happen（发生），就变成了我多了一个竞争者，是不是？”</p>
 <p>毛汉身边很多做生意的朋友，都因为这次疫情大失预算。“中国是一个大工厂，很多配件一定要从大陆买来，大陆那里没有了，supply chain（供应链）停了，你就做不了。所以现在我听到很多朋友说，以后不会把整个订单都放在大陆，就是比如我要订一万件衬衣，我只会从大陆买8,000块钱，2,000块钱在其它国家买，我不想全部停了，（万一出事了）就全部都没有了。”</p>
@@ -27,7 +27,7 @@
 <p>毛汉形容现今市民对政府“完全没有信心”，惟有全民自救，四处去买口罩。他的印度朋友，早前到印度买了5万口罩，留下了一二万个给自己用外，当中的三万个，上星期三（19日）在尖沙咀派发给长者做善事。</p>
 <p>特首林郑月娥早前推出300亿元抗疫基金计划，包括拨款15亿元支援香港生产口罩。毛汉认为派钱不能解决问题，如果想要帮助生意人，应该豁免电费、电话费，政府减税等，这样才能实际帮到商家。</p>
 <h2>标普︰疫情对港经济冲击最大</h2>
-<p>国际评级机构标准普尔19日在最新报告中指，由于<a href="https://github.com/hvrsuf251/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>疫情已波及大陆以外的国家及地区，因此对亚太区全年经济增长预测，由原先的4.8%下调至4.3%。报告更指，香港及新加坡受到的冲击最大（will be hardest hit），预期香港GDP会因此而损失1.2个百分点。标普此前预测香港今年经济增幅为0.2%，意味着今年香港经济料会下跌1%。</p>
+<p>国际评级机构标准普尔19日在最新报告中指，由于<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>疫情已波及大陆以外的国家及地区，因此对亚太区全年经济增长预测，由原先的4.8%下调至4.3%。报告更指，香港及新加坡受到的冲击最大（will be hardest hit），预期香港GDP会因此而损失1.2个百分点。标普此前预测香港今年经济增幅为0.2%，意味着今年香港经济料会下跌1%。</p>
 <p>报告指，鉴于香港和新加坡经济对大陆高度依赖，且紧密联系，标普预计两地的GDP将会因疫情而分别损失1.2及0.9个百分点；大陆料会损失0.7个百分点（见表）。</p>
 <p>报告指，疫情对大陆及亚太区经济影响主要集中在四个方面，包括︰人员流动、供应链、贸易及商品价格。疫情对消费需求的冲击，主要体现在那些无法或不愿到公众场所或出外旅行的消费者；而对供应的冲击，则主要体现在中国新年假期过后企业无法恢复营运。</p>
 <p>报告预计，疫情或会改变消费者和企业的行为，以及政府的政策反应。大陆即使疫情得到控制，疫情对经济的影响仍然存在。</p>
@@ -37,48 +37,52 @@
 <h2>财案周三出炉 商界冀直接派钱</h2>
 <p>另外，新一份财政预算案本周三（26日）出炉，财政司司长陈茂波早前指本年度赤字料创新高，暗示不可能全民派钱。不过，面对汹涌疫情，各行各业百业萧条，各政党都建议向市民派一万元。陈茂波23日发表网志，指终敲定了预算案内容，强调政府资源有限，预算案不可能完全满足所有人要求。</p>
 <p>中华厂商联合会行政总裁杨立门23日出席“城市论坛”时指，继持续半年多的社会事件后，疫症是再一次的打击。他指，中小企占香港90%以上，料未来半年有海啸式结业、裁员潮，“捱不过就倒闭，引发社会问题”。他认为，政府应动用丰厚财政储备，直接派钱刺激经济。</p>
-<p>时事经济评论员李兆富分析，香港经济现时仍未是最差情况，担心未来宏观经济环境可能转差，或全球对前景信心逆转等。他又认为，政府提出的大前题“保企业、保就业”是伪命题，无论如何都会有经济不善情况，直接派钱派予市民会更好。</p>
-<p>责任编辑：连书华 #</p>
+<p>时事经济评论员李兆富分析，香港经济现时仍未是最差情况，担心未来宏观经济环境可能转差，或全球对前景信心逆转等。他又认为，政府提出的大前题“保企业、保就业”是伪命题，无论如何都会有经济不善情况，直接派钱派予市民会更好。#◇</p>
+<p>责任编辑：连书华</p>
 
 <hr>
-
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/23/n11890348.htm">【珍言真语】商界领袖毛汉：疫情致生意损七成</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11888131.htm">【珍言真语】杨健兴：警惕中共舆论战误导</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881126.htm">【珍言真语】巴裔港商：不再依赖大陆生存</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878390.htm">【珍言真语】吕秉权：中共牺牲人命保经济</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11875838.htm">【珍言真语】薛浩然：民心尽失 政府走不远</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11872315.htm">【珍言真语】马仲仪：物资紧缺 公卫不让步</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869465.htm">【珍言真语】刘达文：中南海系统失灵</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11861588.htm">【珍言真语】梁家杰：疫症下香港沦失败城</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854274.htm">【珍言真语】刘达邦：疫情重创港资企业</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852734.htm">【珍言真语】吴明德：港府应提取储备救急</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883542.htm">【热点互动】围绕零号病人 官方为何讳莫如深</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886677.htm">【唐靖远快评】北京2月底须控制疫情的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881805.htm">搭飞机和计程车留意这些事 降传染风险</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hvrsuf251/djy/blob/master/gb/20/2/23/n11890348.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hvrsuf251/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hvrsuf251/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hvrsuf251/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hvrsuf251/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hvrsuf251/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/22/n11888131.md#1">【珍言真语】杨健兴：警惕中共舆论战误导</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/19/n11881126.md#1">【珍言真语】巴裔港商：不再依赖大陆生存</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11878390.md#1">【珍言真语】吕秉权：中共牺牲人命保经济</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/17/n11875838.md#1">【珍言真语】薛浩然：民心尽失 政府走不远</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/16/n11872315.md#1">【珍言真语】马仲仪：物资紧缺 公卫不让步</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/14/n11869465.md#1">【珍言真语】刘达文：中南海系统失灵</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/11/n11861588.md#1">【珍言真语】梁家杰：疫症下香港沦失败城</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/8/n11854274.md#1">【珍言真语】刘达邦：疫情重创港资企业</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/7/n11852734.md#1">【珍言真语】吴明德：港府应提取储备救急</a></li>
+<hr>
+
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/6/23/n8026568.md#1">最新报告：中共强摘器官数量惊人</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/7/n11306932.md#1" target="_blank">共产暴政录：共产党主导的三区叛乱</a></li><li><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/23/n11890348.htm">【珍言真语】商界领袖毛汉：疫情致生意损七成</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/2/23/n11890348.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
